@@ -18,6 +18,8 @@ Version 6.6.2 - not yet released
   - fix IOIO reconnect
 * cross section
   - also display unknown airspace types (#2884)
+* Raspberry Pi
+  - fix instant crash (#2922)
 
 Version 6.6.1 - 2013/05/08
 * cross section
